--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,46 @@
 /nbproject/private/
+
+build.xml
+
+manifest.mf
+
+*Test.java
+*.pydevproject
+*.metadata
+*.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.classpath
+.project
+.class
+.DS_Store
+*.class
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# TeXlipse plugin
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+
